# learnify

./: .gitignore  README.md  main.py  pyproject.toml
docs/: index.html
learnify/: __init__.py  metrics.py  plotting.py
learnify/core/: __init__.py  autodiff.py  optim.py  rng.py  visualization.py
learnify/ml/: __init__.py  clustering.py  ensemble.py  linear.py  svm.py  tree.py
learnify/nn/: __init__.py  mlp.py
notebooks/: learnify_overview.ipynb
tests/: test_autodiff.py  test_models.py  test_plotting.py
