[project]
name = "learnify"
version = "0.1.0"
description = "Didactic from-scratch machine learning and deep learning library built with raw Python and NumPy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "notebook>=7.5.5",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "notebook>=7.4",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
